Rework + single-line-diagram-server integration
Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>